31.may (ws)
      - added "Schleifer" articulation
29.may (ws)
      - some berlin music hackday hacks
26.may (ws)
      - fix #10490: Endless loop on entering (some) lyrics underscore (patch from Miwarre)
25.may (ws)
      - fix #10805: Extra rests in measure when entering (some) notes
23.may (ws)
      - selecting a chord stem and press "add tie +" ties the whole chord
      - add tie "+" can be applied to several selected notes at once
      - fix #4526: Adding ties to chords
22.may (ws)
      - add "join score" function to album
20.may (la)
      - Add import of Score Writer *.scw files + testsuite (patch by Rui Fan)
19.may (ws)
      - fix #10710: factory reset
      - add default style preference for parts
18.may (ws)
      - implementation of layer feature
17.may (ws)
      - slightly more flexible way to enter notes/rests in voice != 0
       (la)
      - fix #1722: Continue last session tries to open discarded score
      - fix #9338: chordname scrolls offscreen
16.may (la)
      - Add support for notehead color in MusicXML export and import
      - Add shape notehead support in MusicXML export and import
14.may (ws)
      - change tuplet numbers to italic and increase size from 8pt to 10pt to distinguish
        them better from fingering numbers
      - fix #8698: unable to make invisible flag without making also stem invisible
      - fix #7460: Soundfont disabled when resetting preferences
      - more beam tweaking
13.may (ws)
      - fix #10659: no sound in part
      - fix #10660: continue last session & panel enabled
      - more flexible instrument names
12.may (ws)
      - better organ template in instruments.xml
      - add icon size to preferences
      - fix #10634: create barLineSpan and system brackets for parts
      - fix #10631: Dots out of place in Part
      - fix #10642: Playback position not held after changing score
11.may (ws)
      - fix #8998: Exporting MIDI causes crash